# ai-engineering

./: .gitignore  README.md
interviewer-chatbot/: Dockerfile  Makefile  README.md  pyproject.toml
interviewer-chatbot/configs/: environment-dev.yaml  environment.yaml
interviewer-chatbot/interviewer_chatbot/: app.py
interviewer-chatbot/interviewer_chatbot/services/: chat_service.py  feedback_service.py
interviewer-chatbot/interviewer_chatbot/utils/: config.py  logger.py  secrets.py
notebooks/: 1-transformers.ipynb  2-langchain.ipynb  3-rag.ipynb  4-langgraph.ipynb  pyproject.toml
notebooks/sqlite_database/: langgraph_checkpoint.db-shm  langgraph_checkpoint.db-wal
notebooks/vector_store/: chroma.sqlite3
simple_chatbot/: Dockerfile  Makefile  app.py  pyproject.toml
