[project]
name = "ai-engineering-notebooks"
version = "0.1.0"
description = "AI Engineering Notebooks"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "langchain>=1.2.14",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.4",
    "langgraph-checkpoint>=4.0.1",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-prebuilt>=1.0.8",
    "langgraph-sdk>=0.3.12",
    "langsmith>=0.7.24",
    "openai>=2.30.0",
    "transformers>=5.5.0",
]

[dependency-groups]
dev = [
    "docx2txt>=0.9",
    "grandalf>=0.8",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "torch>=2.11.0",
]
